--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "leetcode-test-utils",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "leetcode case test helper to build initial data structure",
   "main": "dist/index.js",
   "types": "index.d.ts",
@@ -30,6 +30,9 @@
     "jest": "^29.5.0",
     "ts-jest": "^29.1.0",
     "typescript": "^5.0.4"
+  },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/"
   },
   "jest": {
     "moduleFileExtensions": [
