--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "leetcode-test-utils",
-  "version": "0.0.3",
+  "version": "0.0.6",
   "description": "leetcode case test helper to build initial data structure",
-  "main": "dist/index.js",
+  "main": "dist/index.mjs",
   "type": "module",
   "types": "index.d.ts",
   "scripts": {
     "dev": "tsc --watch",
-    "build": "tsc",
-    "test": "jest"
+    "build": "rollup -c",
+    "test": "jest",
+    "release": "npm run build && npm publish"
   },
   "repository": {
     "type": "git",
@@ -26,9 +27,12 @@
   "homepage": "https://github.com/sicau-hsuyang/leetcode-test-utils#readme",
   "devDependencies": {
     "@jest/globals": "^29.5.0",
+    "@rollup/plugin-node-resolve": "^15.2.1",
     "@types/jest": "^29.5.0",
     "@types/node": "^18.15.11",
     "jest": "^29.5.0",
+    "rollup": "^3.28.1",
+    "rollup-plugin-typescript2": "^0.35.0",
     "ts-jest": "^29.1.0",
     "typescript": "^5.0.4"
   },
@@ -53,8 +57,6 @@
     "testEnvironment": "node"
   },
   "dependencies": {
-    "clipboardy": "^3.0.0",
-    "clipeasy": "^1.0.4",
-    "esm": "^3.2.25"
+    "node-clipboardy": "^1.0.3"
   }
 }
