--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "ES5",
+    "target": "ES6",
     "strict": true,
     "declaration": true,
     "skipLibCheck": true,
@@ -11,7 +11,8 @@
     "lib": ["ESNext", "dom"],
     "module": "esnext",
     "moduleResolution": "node",
-    "outDir": "dist"
+    "outDir": "dist",
+    "allowJs": true
   },
   "include": ["src"]
 }
