--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "dev": "tsc --watch",
     "build": "rollup -c",
-    "test": "jest",
+    "test": "jest --coverage",
     "release": "npm run build && npm publish"
   },
   "repository": {
@@ -54,7 +54,7 @@
     "collectCoverageFrom": [
       "**/*.(t|j)s"
     ],
-    "coverageDirectory": "../coverage",
+    "coverageDirectory": "./coverage",
     "testEnvironment": "node"
   },
   "dependencies": {
